# trackside-labs

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DATA_WORKFLOW.md  Makefile  README.md  SCHEMA_VALIDATION.md  app.py  predict_weekend.py  production_config.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  simulator.py
.streamlit/: config.toml  credentials.toml
config/: default.yaml  production_config.json
data/: 2025_pirelli_info.json  current_lineups.json  driver_debuts.csv  driver_debuts.json  learning_state.json
docs/: COMPOUND_ANALYSIS.md  DASHBOARD_AUTO_UPDATE.md  FP_BLENDING_SYSTEM.md  PERSISTENCE_SUPABASE.md  PREDICTION_TRACKING.md  README.md  WEEKEND_PREDICTIONS.md  WEIGHT_SCHEDULE_GUIDE.md
migrations/: 001_create_artifacts_table.sql
notebooks/: 01_data_validation.ipynb  02_feature_engineering.ipynb  03_bayesian_core.ipynb  04_sequential_learning.ipynb  05_track_characteristics.ipynb  06_practice_extraction.ipynb  07_car_characteristics.ipynb  08_driver_characteristics.ipynb  09_progressive_predictions.ipynb  10_extract_2025_results.ipynb  11_model_validation.ipynb  12_prediction_bias_analysis.ipynb  13_validation.ipynb  14_full_grid_prediction.ipynb  15_blended_predictions.ipynb  16_comprehensive_testing.ipynb  17_production_testing.ipynb  hyperparameter_tuning.ipynb  preseason_testing_analysis.ipynb  sensitivity_analysis.ipynb  test_weight_schedules.ipynb  validate_testing_predictions.ipynb  validation_metrics.ipynb  validation_report.ipynb
scripts/: backfill_to_db.py  calculate_team_performance.py  extract_driver_characteristics.py  extract_overtaking_likelihood.py  generate_2026_baseline.py  post_race_analysis.py  simulator.py  test_blend_weights.py  test_predictor_with_db.py  test_supabase_connection.py  update_from_race.py  update_from_testing.py  update_prediction_actuals.py  validate_characteristics.py
tests/: conftest.py  test_actual_results_fetcher.py  test_adaptive_fp_blending.py  test_artifact_store.py  test_auto_updater.py  test_baseline_2026_integration.py  test_baseline_data_mixin.py  test_baseline_race_params_mixin.py  test_baseline_race_prediction_mixin.py  test_baseline_race_preparation_mixin.py  test_bayesian_driver_ranking.py  test_compound_analyzer.py  test_compound_performance.py  test_compound_validator.py  test_config_schema.py  (+57 more)
(+131 files in other folders)
