[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formula1-2026"
version = "0.1.0"
description = "F1 2026 weekend prediction dashboard"
requires-python = ">=3.11,<3.14"
dependencies = [
  "streamlit>=1.32,<2",
  "fastf1>=3.3,<4",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "PyYAML>=6,<7",
  "plotly>=5.24,<7",
  "tabulate>=0.9,<1",
  "requests>=2.31,<3",
  "supabase>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "black>=24,<26",
  "mypy>=1.18,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "pytest-benchmark>=5,<6",
  "pytest-mock>=3.14,<4",
  "hypothesis>=6.120,<7",
  "ruff>=0.9,<1",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E203", # black compat
  "E501", # black doesn't wrap long strings/f-strings reliably
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
implicit_optional = true
disable_error_code = ["attr-defined", "var-annotated"]
warn_unused_ignores = true
warn_redundant_casts = true
